# FilmsBooksViewer

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/fbv/: main.py
